[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/services/EnemyService.gd" type="Script" id=1]
[ext_resource path="res://scenes/enemies/EnemyPool.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/enemies/waves/TwoColumns.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/enemies/waves/TwoRows.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/enemies/waves/Box.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/enemies/waves/Swarm.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/enemies/waves/Sweep.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/enemies/waves/WideSweep.tscn" type="PackedScene" id=8]

[node name="Enemies" type="YSort"]
script = ExtResource( 1 )

[node name="EnemyPool" parent="." instance=ExtResource( 2 )]

[node name="TwoColumns" parent="." instance=ExtResource( 3 )]

[node name="TwoRows" parent="." instance=ExtResource( 4 )]

[node name="Box" parent="." instance=ExtResource( 5 )]

[node name="Swarm" parent="." instance=ExtResource( 6 )]

[node name="Sweep" parent="." instance=ExtResource( 7 )]

[node name="WideSweep" parent="." instance=ExtResource( 8 )]

[node name="TrickleToggleTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 0.05
